solve overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,14 @@
 * {
   box-sizing: "border-box";
   /* border: 1px solid red; */
+  /* margin: 0; */
+
 }
 
+html, body {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
 body {
   font-family: "Montserrat", serif;
 }
